--- a/src/components/ConfirmHuella.astro
+++ b/src/components/ConfirmHuella.astro
@@ -2,10 +2,14 @@
 interface Props {
   procesoConfirmado?: string;
   componentId?: string;
+  idsSubprocesos?: number[];
 }
 
 // Generar un ID único para este componente si no se proporciona uno
 const { procesoConfirmado = '', componentId = 'huella_' + Math.random().toString(36).substring(2, 10) } = Astro.props;
+
+const idsJson = JSON.stringify(Astro.props.idsSubprocesos);
+console.log("idsJson", idsJson);
 ---
 <div class="mb-[1rem]">
   <!-- Botón para abrir el diálogo de subida -->
@@ -34,7 +38,8 @@ const { procesoConfirmado = '', componentId = 'huella_' + Math.random().toString
     <div class="bg-white rounded-lg p-6 max-w-md w-full relative z-50">
       <h3 class="text-lg font-semibold mb-4">Validación de Huella Digital</h3>
       <div class="text-center mb-6">
-        <button id="{componentId}_fingerprint-button" class="w-32 h-32 mx-auto border-2 border-dashed border-gray-300 rounded-full flex items-center justify-center hover:bg-gray-100 focus:outline-none transition-colors">
+        <h1 id="idsJson" data-ids={idsJson}>{idsJson}</h1>
+        <button onclick="confirmarHuella()" id="{componentId}_fingerprint-button" class="w-32 h-32 mx-auto border-2 border-dashed border-gray-300 rounded-full flex items-center justify-center hover:bg-gray-100 focus:outline-none transition-colors">
           <svg class="w-16 h-16 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z" />
           </svg>
@@ -71,7 +76,37 @@ const { procesoConfirmado = '', componentId = 'huella_' + Math.random().toString
     </div>
   </div>
 
-
+  <script type="text/javascript">
+    async function confirmarHuella() {
+      // Obtener los IDs desde el dataset
+      const h1 = document.getElementById('idsJson');
+      const idsString = h1?.dataset.ids;
+      
+      // Parsear el string JSON a array de números
+      let idsArray = [];
+      try {
+        idsArray = JSON.parse(idsString);
+        console.log('IDs parseados:', idsArray);
+      } catch (error) {
+        console.error('Error parseando IDs:', error);
+        alert('Error al procesar los IDs');
+        return;
+      }
+      
+      const response = await fetch('https://localhost:44345/api/Valija/UpdateStateSubProcesos', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ Ids: idsArray, IdEstado: 1 })
+      });
+      if (response.ok) {
+        // alert('Proceso confirmado con éxito');
+        // Mostrar éxito
+      } else {
+        alert('Error al confirmar el proceso');
+        // Mostrar error
+      }
+    }
+  </script>
   
 
   <!-- Scripts -->
@@ -128,12 +163,13 @@ const { procesoConfirmado = '', componentId = 'huella_' + Math.random().toString
       } else {
         // Si estamos en una ventana completa, recargamos esta ventana
         // window.location.reload();
-        window.location.href = '/login_valija_0estacion';
+        window.location.href = '/';
       }
     }
 
     // Listeners al cargar la página
     document.addEventListener('DOMContentLoaded', function () {
+
       // Inicializar el botón oculto para abrir el diálogo
       document.getElementById(componentId + '_showUploadConfirmDialog').addEventListener('click', showUploadConfirmDialog);
       
