--- a/src/layouts/LayoutRigth.astro
+++ b/src/layouts/LayoutRigth.astro
@@ -1,7 +1,7 @@
 ---
 import "../styles/global.css";
 import ContenidoAMostrar from "../components/ContenidoAMostrar.astro";
-const { content, station, date, title } = Astro.props;
+const { content, station, date, title, idsSubprocesos = [], otro, procesoId } = Astro.props;
 import ScrollPanelButtons from "../components/ScrollPanelButtons.astro";
 import Huella from "../components/ConfirmHuella.astro";
 
@@ -35,17 +35,24 @@ export const prerender = false;
 		</div>
 		<main>
 			<slot />
-
+			
+			<!-- <p>{otro}</p>
+			<p>{idsSubprocesos}</p> -->
 		</main>
 		<br />
 		<div class="flex items-center justify-center">
-			<Huella />
-
+			<Huella idsSubprocesos={idsSubprocesos} />
+			<h1 id="subprocesos" data-ids={idsSubprocesos}>{idsSubprocesos}</h1>
 		</div>
 		<div id="button-scroll">
 			
 		</div>
 	</body>
+	<script>
+		const h1 = document.getElementById('subprocesos');
+		const ids = h1?.dataset.ids;
+		console.log(ids);		
+	</script>	
 </html>
 
 <style>
@@ -57,7 +64,7 @@ export const prerender = false;
 	}
 	body {
 		font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+		background-color: #2d2d2d;
 
 	}
 	*{
