--- a/src/pages/procesosPages/est_valija_2resultadosBusqueda.astro
+++ b/src/pages/procesosPages/est_valija_2resultadosBusqueda.astro
@@ -5,9 +5,11 @@ export const prerender = false;
 
 import "../../styles/global.css";
 import GastosCheckDinamic from "../../components/GastosCheckDinamic.svelte";
+const idsSubprocesos = [7, 8, 9]; // IDs de subprocesos a actualizar
+
 ---
 
-<Layout title="Movimientos de caja">
+<Layout title="Movimientos de caja" idsSubprocesos={idsSubprocesos}>
   <div class="mx-auto p-4 space-y-6 bg-white rounded-md shadow-md mt-1">
     <!-- Encabezado
     <div class="flex flex-col space-y-1">
