--- a/src/pages/procesosPages/est_valija_4cargaDocumentosxTurno.astro
+++ b/src/pages/procesosPages/est_valija_4cargaDocumentosxTurno.astro
@@ -3,9 +3,10 @@ import Layout from '../../layouts/LayoutRigth.astro';
 import '../../styles/global.css';
 import CargaDocumentosxTurno from '../../components/customInput/est_valija_4sistemUploadComp.svelte';
 export const prerender = false;
+const idsSubprocesos = [12,13,14,15]; // IDs de subprocesos a actualizar
 
 ---
 
-<Layout>
+<Layout title="Carga de Documentos por Turno" idsSubprocesos={idsSubprocesos}>
   <CargaDocumentosxTurno client:visible />
 </Layout>
