--- a/src/pages/procesosPages/form_HuellaFinal/form_ConfirmacionFinal.astro
+++ b/src/pages/procesosPages/form_HuellaFinal/form_ConfirmacionFinal.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "../../layouts/LayoutRigth.astro";
-import Huella from "../../components/ConfirmHuella.astro";
+import Layout from "../../../layouts/LayoutRigth.astro";
+import Huella from "../../../components/ConfirmHuella.astro";
 export const prerender = false;
 
 ---
